Closed Bug 1756174 Opened 3 years ago Closed 3 years ago

Assertion failure: false, at /gfx/gl/MozFramebuffer.cpp:123

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
100 Branch
Tracking Status
firefox100 --- verified

People

(Reporter: jkratzer, Assigned: jgilbert)

References

(Blocks 1 open bug)

Details

(Keywords: testcase, Whiteboard: [bugmon:bisected,confirmed])

Attachments

(2 files)

Testcase found while fuzzing mozilla-central rev 6938c3b26d14 (built with: --enable-debug --enable-fuzzing).

Testcase can be reproduced using the following commands:

$ pip install fuzzfetch grizzly-framework
$ python -m fuzzfetch --build 6938c3b26d14 --debug --fuzzing -n firefox
$ python -m grizzly.replay ./firefox/firefox testcase.html
Assertion failure: false, at /gfx/gl/MozFramebuffer.cpp:123

    ==2356278==ERROR: UndefinedBehaviorSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f9afb0807f3 bp 0x7fffb698a810 sp 0x7fffb698a7b0 T2356278)
    ==2356278==The signal is caused by a WRITE memory access.
    ==2356278==Hint: address points to the zero page.
        #0 0x7f9afb0807f3 in mozilla::gl::MozFramebuffer::CreateImpl(mozilla::gl::GLContext*, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, unsigned int, RefPtr<mozilla::gl::DepthAndStencilBuffer> const&, unsigned int, unsigned int) /gfx/gl/MozFramebuffer.cpp:123:5
        #1 0x7f9afb06af0c in mozilla::gl::MozFramebuffer::Create(mozilla::gl::GLContext*, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, unsigned int, bool) /gfx/gl/MozFramebuffer.cpp:68:10
        #2 0x7f9afcf80204 in operator() /dom/canvas/WebGLContext.cpp:429:22
        #3 0x7f9afcf80204 in mozilla::WebGLContext::EnsureDefaultFB() /dom/canvas/WebGLContext.cpp:426:5
        #4 0x7f9afcf8c210 in operator() /dom/canvas/WebGLContext.cpp:559:17
        #5 0x7f9afcf8c210 in mozilla::WebGLContext::Create(mozilla::HostWebGLContext&, mozilla::webgl::InitContextDesc const&, mozilla::webgl::InitContextResult*) /dom/canvas/WebGLContext.cpp:493:14
        #6 0x7f9afcebec80 in Create /dom/canvas/HostWebGLContext.cpp:58:16
        #7 0x7f9afcebec80 in operator() /dom/canvas/ClientWebGLContext.cpp:657:11
        #8 0x7f9afcebec80 in mozilla::ClientWebGLContext::CreateHostContext(mozilla::avec2<unsigned int> const&) /dom/canvas/ClientWebGLContext.cpp:624:14
        #9 0x7f9afcec2706 in mozilla::ClientWebGLContext::SetDimensions(int, int) /dom/canvas/ClientWebGLContext.cpp:596:8
        #10 0x7f9afcebb264 in mozilla::dom::CanvasRenderingContextHelper::UpdateContext(JSContext*, JS::Handle<JS::Value>, mozilla::ErrorResult&) /dom/canvas/CanvasRenderingContextHelper.cpp:260:24
        #11 0x7f9afcebadb5 in mozilla::dom::CanvasRenderingContextHelper::GetOrCreateContext(JSContext*, mozilla::dom::CanvasContextType, JS::Handle<JS::Value>, mozilla::ErrorResult&) /dom/canvas/CanvasRenderingContextHelper.cpp:212:19
        #12 0x7f9afcebaaa7 in mozilla::dom::CanvasRenderingContextHelper::GetOrCreateContext(JSContext*, nsTSubstring<char16_t> const&, JS::Handle<JS::Value>, mozilla::ErrorResult&) /dom/canvas/CanvasRenderingContextHelper.cpp:186:10
        #13 0x7f9afd4128b5 in mozilla::dom::HTMLCanvasElement::GetContext(JSContext*, nsTSubstring<char16_t> const&, JS::Handle<JS::Value>, mozilla::ErrorResult&) /dom/html/HTMLCanvasElement.cpp:1068:40
        #14 0x7f9afcc58708 in mozilla::dom::HTMLCanvasElement_Binding::getContext(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/HTMLCanvasElementBinding.cpp:550:64
        #15 0x7f9afcde0028 in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) /dom/bindings/BindingUtils.cpp:3306:13
        #16 0x7f9b0094040f in CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) /js/src/vm/Interpreter.cpp:425:13
        #17 0x7f9b0093fb0d in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:512:12
        #18 0x7f9b009415ee in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /js/src/vm/Interpreter.cpp:572:10
        #19 0x7f9b00936ea6 in CallFromStack /js/src/vm/Interpreter.cpp:576:10
        #20 0x7f9b00936ea6 in Interpret(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:3309:16
        #21 0x7f9b0092dda3 in js::RunScript(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:394:13
        #22 0x7f9b0093fa08 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:544:13
        #23 0x7f9b009415ee in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /js/src/vm/Interpreter.cpp:572:10
        #24 0x7f9b009417f1 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /js/src/vm/Interpreter.cpp:589:8
        #25 0x7f9b00a73ef1 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /js/src/vm/CallAndConstruct.cpp:117:10
        #26 0x7f9afcaff247 in mozilla::dom::EventListener::HandleEvent(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/EventListenerBinding.cpp:62:8
        #27 0x7f9afd2e65b6 in void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/EventListenerBinding.h:65:12
        #28 0x7f9afd2e633a in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) /dom/events/EventListenerManager.cpp:1308:43
        #29 0x7f9afd2e7039 in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) /dom/events/EventListenerManager.cpp:1505:17
        #30 0x7f9afd2dc044 in HandleEvent /dom/events/EventListenerManager.h:395:5
        #31 0x7f9afd2dc044 in mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) /dom/events/EventDispatcher.cpp:348:17
        #32 0x7f9afd2db567 in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /dom/events/EventDispatcher.cpp:550:16
        #33 0x7f9afd2dddc8 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /dom/events/EventDispatcher.cpp:1085:11
        #34 0x7f9afeaf40b3 in nsDocumentViewer::LoadComplete(nsresult) /layout/base/nsDocumentViewer.cpp:1084:7
        #35 0x7f9b0012a4e4 in nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult) /docshell/base/nsDocShell.cpp:6407:20
        #36 0x7f9b00129fd3 in nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /docshell/base/nsDocShell.cpp:5796:7
        #37 0x7f9b0012ae6f in non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /docshell/base/nsDocShell.cpp
        #38 0x7f9afae4a71c in nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) /uriloader/base/nsDocLoader.cpp:1377:3
        #39 0x7f9afae49caa in nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) /uriloader/base/nsDocLoader.cpp:975:14
        #40 0x7f9afae48030 in nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&) /uriloader/base/nsDocLoader.cpp:794:9
        #41 0x7f9afae491ed in nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /uriloader/base/nsDocLoader.cpp:677:5
        #42 0x7f9b0014c11d in nsDocShell::OnStopRequest(nsIRequest*, nsresult) /docshell/base/nsDocShell.cpp:13783:23
        #43 0x7f9af9b9b64a in mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult) /netwerk/base/nsLoadGroup.cpp:614:22
        #44 0x7f9af9b9cc33 in mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) /netwerk/base/nsLoadGroup.cpp:518:10
        #45 0x7f9afb81f6d5 in mozilla::dom::Document::DoUnblockOnload() /dom/base/Document.cpp:11549:18
        #46 0x7f9afb7ea233 in mozilla::dom::Document::UnblockOnload(bool) /dom/base/Document.cpp:11479:9
        #47 0x7f9afb8060fb in mozilla::dom::Document::DispatchContentLoadedEvents() /dom/base/Document.cpp:7994:3
        #48 0x7f9afb8b7c4b in applyImpl<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1147:12
        #49 0x7f9afb8b7c4b in apply<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1153:12
        #50 0x7f9afb8b7c4b in mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1200:13
        #51 0x7f9af999e4a2 in mozilla::SchedulerGroup::Runnable::Run() /xpcom/threads/SchedulerGroup.cpp:140:20
        #52 0x7f9af99cf2ce in mozilla::RunnableTask::Run() /xpcom/threads/TaskController.cpp:467:16
        #53 0x7f9af99a84f6 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:770:26
        #54 0x7f9af99a71b8 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:606:15
        #55 0x7f9af99a7433 in mozilla::TaskController::ProcessPendingMTTask(bool) /xpcom/threads/TaskController.cpp:390:36
        #56 0x7f9af99d2776 in operator() /xpcom/threads/TaskController.cpp:124:37
        #57 0x7f9af99d2776 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531:5
        #58 0x7f9af99bd443 in nsThread::ProcessNextEvent(bool, bool*) /xpcom/threads/nsThread.cpp:1171:16
        #59 0x7f9af99c495a in NS_ProcessNextEvent(nsIThread*, bool) /xpcom/threads/nsThreadUtils.cpp:467:10
        #60 0x7f9afa4710a6 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:85:21
        #61 0x7f9afa38e167 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:331:10
        #62 0x7f9afa38e072 in RunHandler /ipc/chromium/src/base/message_loop.cc:324:3
        #63 0x7f9afa38e072 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:306:3
        #64 0x7f9afe74f388 in nsBaseAppShell::Run() /widget/nsBaseAppShell.cpp:137:27
        #65 0x7f9b007c3b63 in XRE_RunAppShell() /toolkit/xre/nsEmbedFunctions.cpp:878:20
        #66 0x7f9afa471f9a in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:235:9
        #67 0x7f9afa38e167 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:331:10
        #68 0x7f9afa38e072 in RunHandler /ipc/chromium/src/base/message_loop.cc:324:3
        #69 0x7f9afa38e072 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:306:3
        #70 0x7f9b007c319c in XRE_InitChildProcess(int, char**, XREChildData const*) /toolkit/xre/nsEmbedFunctions.cpp:715:34
        #71 0x55b8a1755d37 in content_process_main /browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
        #72 0x55b8a1755d37 in main /browser/app/nsBrowserApp.cpp:327:18
        #73 0x7f9b0fd7e0b2 in __libc_start_main /build/glibc-eX1tMB/glibc-2.31/csu/../csu/libc-start.c:308:16
        #74 0x55b8a17314bc in _start (/home/jkratzer/builds/mc-debug/firefox-bin+0x154bc)
    
    UndefinedBehaviorSanitizer can not provide additional info.
    SUMMARY: UndefinedBehaviorSanitizer: SEGV /gfx/gl/MozFramebuffer.cpp:123:5 in mozilla::gl::MozFramebuffer::CreateImpl(mozilla::gl::GLContext*, mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> const&, unsigned int, RefPtr<mozilla::gl::DepthAndStencilBuffer> const&, unsigned int, unsigned int)
    ==2356278==ABORTING
Attached file Testcase

Bugmon Analysis
Verified bug as reproducible on mozilla-central 20220218090822-6938c3b26d14.
Unable to bisect testcase (Testcase reproduces on start build!):

Start: cff2cf5c488e5af008bc0da02abf562d167b9605 (20210219041607)
End: 6938c3b26d145c7e2c77f078566463df66d45359 (20220218090822)
BuildFlags: BuildFlags(asan=False, tsan=False, debug=True, fuzzing=True, coverage=False, valgrind=False, no_opt=False, fuzzilli=False)

Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]

The severity field is not set for this bug.
:jgilbert, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jgilbert)

https://searchfox.org/mozilla-central/source/gfx/gl/MozFramebuffer.cpp#123

  const auto status = gl->fCheckFramebufferStatus(LOCAL_GL_FRAMEBUFFER);
  if (status != LOCAL_GL_FRAMEBUFFER_COMPLETE) {
    MOZ_ASSERT(false);

This is technically a valid way for this to fail.
This should probably be gfxCriticalNote.

Flags: needinfo?(jgilbert)
Assignee: nobody → jgilbert
Severity: -- → S4
Priority: -- → P3
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4fab152b88eb gfxCriticalNote with details, instead of hard assert. r=gfx-reviewers,aosmond
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch

Bugmon Analysis
Verified bug as fixed on rev mozilla-central 20220315053053-adbf8f2ecf80.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

Status: RESOLVED → VERIFIED
Keywords: bugmon

:jgilbert, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(jgilbert)

Sorry, bug in the bot.

Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: