Bug 1756174 - gfxCriticalNote with details, instead of hard assert. r=gfx-reviewers,aosmond

Differential Revision: https://phabricator.services.mozilla.com/D140697